--- a/Developer/Views/Shared/_Layout.cshtml
+++ b/Developer/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <div class="row">
     </div>
     <div class="container body-content">
-        <div class="row" hidden>
+        <div class="row">
             <div class="col-md-2">
 
             </div>
@@ -40,7 +40,7 @@
                 </div>
             </div>
         </div>
-        <div class="row" style="margin-right:0px">
+        <div class="row" style="margin-right:0px" hidden>
             <div class="col-md-2">
 
             </div>
