--- a/Developer/Views/Shared/_Layout.cshtml
+++ b/Developer/Views/Shared/_Layout.cshtml
@@ -12,35 +12,7 @@
     <div class="row">
     </div>
     <div class="container body-content">
-        <div class="row">
-            <div class="col-md-2">
-
-            </div>
-            <div class="col-md-10">
-                <div class="navbar navbar-default">
-                    <div class="container">
-                        <div class="navbar-header">
-                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </button>
-                            @Html.ActionLink("Strona główna", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-                        </div>
-                        <div class="navbar-collapse collapse">
-                            <ul class="nav navbar-nav">
-                                <li><a href="#">Mieszkania</a></li>
-                                <li><a href="#">Domy</a></li>
-                                <li><a href="#">Działki</a></li>
-                                <li><a href="#">Lokale komercyjne</a></li>
-                                <li><a href="#">Obiekty komercyjne</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row" style="margin-right:0px" hidden>
+        <div class="row" style="margin-right:0px">
             <div class="col-md-2">
 
             </div>
@@ -63,6 +35,16 @@
             <div class="col-md-2">
                 <div class="row">
                     <div class="col-md-12 custom-left-panel">
+                        <ul class="nav nav-pills nav-stacked small">
+                            <li class="custom-list"><a href="#">Strona główna</a></li>
+                            <li class="custom-list"><a href="#">O firmie</a></li>
+                            <li class="custom-list"><a href="#">Kredyty</a></li>
+                            <li class="custom-list"><a href="#">Szybki kontakt</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 custom-left-panel">
                         <small>Wprowadź numer oferty</small><br />
                         <div class="row">
                             <div class="col-md-6" style="padding-right: 0px">
@@ -72,20 +54,6 @@
                                 <button class="btn btn-sm btn-default">Wyszukaj</button>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12 custom-left-panel">
-                        <ul class="nav nav-pills nav-stacked small">
-                            <li class="custom-list"><a href="#">Praca</a></li>
-                            <li class="custom-list"><a href="#">Zespół</a></li>
-                            <li class="custom-list"><a href="#">O firmie</a></li>
-                            <li class="custom-list"><a href="#">Uprawnienia</a></li>
-                            <li class="custom-list"><a href="#">Przyjęcie oferty</a></li>
-                            <li class="custom-list"><a href="#">Zalety wyłączności</a></li>
-                            <li class="custom-list"><a href="#">Kredyty</a></li>
-                            <li class="custom-list"><a href="#">Pliki cookies</a></li>
-                        </ul>
                     </div>
                 </div>
                 <div class="row">
