--- a/Developer/Views/Shared/_Layout.cshtml
+++ b/Developer/Views/Shared/_Layout.cshtml
@@ -16,16 +16,19 @@
             <div class="col-md-2">
 
             </div>
-            <div class="col-md-10" style="background-color:#2c3e50; padding-left:20px">
+            <div class="col-md-10"style=" padding-left:20px">
 
-                <div class="col-md-8">
-                    <div class="partner" style="font-style:italic; font-size: xx-large; color: white">
+                <div class="col-md-6">
+                    <div class="partner" style="font-style: italic; color: black; font-size: large; margin-bottom: 10px; border-bottom: 1px solid black; border-radius: 10px; padding-left:25px;border-left:1px solid black">
                         Najlepszy partner w nieruchomościach
                     </div>
                 </div>
+                <div class="col-md-2">
+
+                </div>
                 <div class="col-md-4">
-                    <div class="partner pull-right" style="font-style: italic; font-size: medium; color: white">
-                        tel. 783 888 222
+                    <div class="partner" style="font-style: italic; color: black; font-size: large; margin-bottom: 10px; border-bottom: 1px solid black; border-radius: 10px; padding-right: 25px; border-right: 1px solid black; text-align:right">
+                        tel. 784 665 112
                     </div>
                 </div>
 
