--- a/Developer/Views/Shared/_Layout.cshtml
+++ b/Developer/Views/Shared/_Layout.cshtml
@@ -12,27 +12,64 @@
     <div class="row">
     </div>
     <div class="container body-content">
-        <div class="row" style="margin-right:0px">
-            <div class="col-md-2">
-
+        <div class="row">
+            <div class="col-md-2 custom-left-panel">
+                <img src="~/Content/img/the-palace-of-culture.jpg" width="100%"/>
             </div>
-            <div class="col-md-10"style=" padding-left:20px">
+            <div class="col-md-10">
 
                 <div class="col-md-6">
-                    <div class="partner" style="font-style: italic; color: black; font-size: large; margin-bottom: 10px; border-bottom: 1px solid black; border-radius: 10px; padding-left:25px;border-left:1px solid black">
+                    <div class="partner" style="font-style: italic; color: black; font-size: large; margin-bottom: 10px; border-bottom: 1px solid black; border-radius: 10px; padding-left: 25px; border-left: 1px solid black">
                         Najlepszy partner w nieruchomościach
                     </div>
                 </div>
                 <div class="col-md-2">
-
                 </div>
                 <div class="col-md-4">
-                    <div class="partner" style="font-style: italic; color: black; font-size: large; margin-bottom: 10px; border-bottom: 1px solid black; border-radius: 10px; padding-right: 25px; border-right: 1px solid black; text-align:right">
+                    <div class="partner" style="font-style: italic; color: black; font-size: large; margin-bottom: 10px; border-bottom: 1px solid black; border-radius: 10px; padding-right: 25px; border-right: 1px solid black; text-align: right">
                         tel. 784 665 112
                     </div>
                 </div>
+                <div class="row" style="margin-right: 15px">
+                    <div class="col-md-12 custom-left-panel" style="margin-left: 15px">
+                        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" style="height: 190px">
+                            <!-- Indicators -->
+                            <ol class="carousel-indicators">
+                                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                                <li data-target="#carousel-example-generic" data-slide-to="1" style="background-color: black"></li>
+                                <li data-target="#carousel-example-generic" data-slide-to="2" style="background-color: black"></li>
+                            </ol>
 
+                            <!-- Wrapper for slides -->
+                            <div class="carousel-inner" role="listbox">
+                                <div class="item active" style="padding: 10px">
+                                    <h1>Lorem Ipsum</h1>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis non justo quis mi imperdiet ultrices. Morbi sed consectetur risus. Nulla faucibus et ipsum ac aliquet. Integer id facilisis risus, dictum pharetra arcu. In hac habitasse platea dictumst. Cras libero ex, sollicitudin eu semper eget, aliquet in justo. Aliquam vel nibh at est tempus efficitur. Sed urna tellus, scelerisque in felis non, semper tempus nulla. Vivamus porttitor risus non diam molestie mattis. Aliquam quis vestibulum mauris, quis feugiat eros. Nullam gravida, leo vel efficitur consequat, massa purus facilisis enim, vitae semper urna massa at mauris. Nullam ac ex nisl.</p>
+                                </div>
+                                <div class="item" style="padding: 10px">
+                                    <h1>Lorem Ipsum
+                                    </h1>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis non justo quis mi imperdiet ultrices. Morbi sed consectetur risus. Nulla faucibus et ipsum ac aliquet. Integer id facilisis risus, dictum pharetra arcu. In hac habitasse platea dictumst. Cras libero ex, sollicitudin eu semper eget, aliquet in justo. Aliquam vel nibh at est tempus efficitur. Sed urna tellus, scelerisque in felis non, semper tempus nulla. Vivamus porttitor risus non diam molestie mattis. Aliquam quis vestibulum mauris, quis feugiat eros. Nullam gravida, leo vel efficitur consequat, massa purus facilisis enim, vitae semper urna massa at mauris. Nullam ac ex nisl.
+                                    </p>
+                                    </p>
+                                </div>
+                            </div>
+
+                            <!-- Controls -->
+                            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
+
         </div>
         <div class="row">
             <div class="col-md-2">
@@ -53,7 +90,7 @@
                             <div class="col-md-6" style="padding-right: 0px">
                                 <input class=" form-control input-sm" />
                             </div>
-                            <div class="col-md-6" style="padding-left:10px">
+                            <div class="col-md-6" style="padding-left: 10px">
                                 <button class="btn btn-sm btn-default">Wyszukaj</button>
                             </div>
                         </div>
@@ -61,12 +98,12 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12 custom-left-panel">
-                        <button class="btn btn-sm btn-danger" style="width:100%">Dodaj bezpłatnie ofertę</button>
+                        <button class="btn btn-sm btn-danger" style="width: 100%">Dodaj bezpłatnie ofertę</button>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12 custom-left-panel">
-                        <button class="btn btn-sm btn-danger" style="width:100%">Gdzie jesteśmy</button>
+                        <button class="btn btn-sm btn-danger" style="width: 100%">Gdzie jesteśmy</button>
                     </div>
                 </div>
             </div>
