--- a/Developer/Views/Home/Index.cshtml
+++ b/Developer/Views/Home/Index.cshtml
@@ -4,29 +4,51 @@
 <script src="~/Scripts/jquery-1.10.2.js"></script>
 <script src="~/Scripts/bootstrap.js"></script>
 
-<div class="row" style="margin-right:15px">
+<div class="row" style="margin-right: 15px">
     <div class="col-md-12 custom-left-panel" style="margin-left: 15px">
         <h4>Wyszukaj ofertę</h4>
         <div class="row">
-            <div class="col-md-6" style="border-right:1px solid black">
+            <div class="col-md-6" style="border-right: 1px solid black">
                 <small>Rodzaj nieruchomości: </small>
-                <select class="form-control input-sm">
+                <div class="dropdown">
+                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+                        Wybierz rodzaj
+                <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+                        <li data-ng-class="{active : activeViewPath==='/house'}"><a href='#/house'>Domy</a></li>
+                        <li data-ng-class="{active : activeViewPath==='/flat'}"><a href='#/flat'>Mieszkania</a></li>
+                        <li data-ng-class="{active : activeViewPath==='/land'}"><a href='#/land'>Działki</a></li>
+                    </ul>
+                </div>
+                @*           <select class="form-control input-sm">
                     <option>Lorem Ipsum</option>
                     <option>Dolor sit amet</option>
                     <option>Integer Id facillisis</option>
-                </select>
+                </select>*@
             </div>
             <div class="col-md-6">
                 <small>Typ oferty :</small>
-                <select class="form-control input-sm">
+                <div class="dropdown">
+                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-expanded="true">
+                        Wybierz rodzaj
+                <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu2">
+                        <li ><a href="#">Wynajem</a></li>
+                        <li><a href="#">Sprzedaż</a></li>
+                    </ul>
+                </div>
+                @*                <select class="form-control input-sm">
                     <option>Lorem Ipsum</option>
                     <option>Dolor sit amet</option>
                     <option>Integer Id facillisis</option>
-                </select>
+                </select>*@
             </div>
         </div>
-        <div class="row" style="margin-top:25px">
-            <div class="col-md-6" style="border-right:1px solid black">
+        <div class="row" style="margin-top: 25px">
+            <div data-ng-view=""></div>
+            @*            <div class="col-md-6" style="border-right: 1px solid black">
                 <small>Miejscowość :</small>
                 <select class="form-control input-sm">
                     <option>Lorem Ipsum</option>
@@ -41,17 +63,19 @@
                     <option>Dolor sit amet</option>
                     <option>Integer Id facillisis</option>
                 </select>
-            </div>
+            </div>*@
         </div>
+
     </div>
 </div>
-<div class="row" style="margin-right:15px">
+
+<div class="row" style="margin-right: 15px">
     <div class="col-md-12 custom-left-panel" style="margin-left: 15px">
         <h4>Najnowsze oferty</h4>
         <div class="row">
             <div class="col-md-3">
                 <img src="~/Content/img/the-palace-of-culture.jpg" width="100%" />
-                <div class="col-md-12" style="background-color:#2c3e50; text-align: center">
+                <div class="col-md-12" style="background-color: #2c3e50; text-align: center">
                     <div class="custom-city">
                         Wrocław
                     </div>
@@ -62,7 +86,7 @@
             </div>
             <div class="col-md-3">
                 <img src="~/Content/img/the-palace-of-culture.jpg" width="100%" />
-                <div class="col-md-12" style="background-color:#2c3e50; text-align: center">
+                <div class="col-md-12" style="background-color: #2c3e50; text-align: center">
                     <div class="custom-city">
                         Wrocław
                     </div>
@@ -72,8 +96,8 @@
                 </div>
             </div>
             <div class="col-md-3">
-                <img src="~/Content/img/the-palace-of-culture.jpg" width="100%"/>
-                <div class="col-md-12" style="background-color:#2c3e50; text-align: center">
+                <img src="~/Content/img/the-palace-of-culture.jpg" width="100%" />
+                <div class="col-md-12" style="background-color: #2c3e50; text-align: center">
                     <div class="custom-city">
                         Wrocław
                     </div>
@@ -83,8 +107,8 @@
                 </div>
             </div>
             <div class="col-md-3">
-                <img src="~/Content/img/the-palace-of-culture.jpg" width="100%"/>
-                <div class="col-md-12" style="background-color:#2c3e50; text-align: center">
+                <img src="~/Content/img/the-palace-of-culture.jpg" width="100%" />
+                <div class="col-md-12" style="background-color: #2c3e50; text-align: center">
                     <div class="custom-city">
                         Wrocław
                     </div>
@@ -98,5 +122,6 @@
 </div>
 
 <script language="javascript">
-    $(".carousel").carousel()
+    $('.dropdown-toggle').dropdown();
+    $(".carousel").carousel();
 </script>
