--- a/Developer/Content/Site.css
+++ b/Developer/Content/Site.css
@@ -48,3 +48,11 @@ textarea {
     font-weight: bolder;
     font-size: large
 }
+
+.grid-style {
+    border: 1px solid rgb(212,212,212);
+    min-height: 250px;
+    max-height: 300px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
