--- a/Developer/Views/Shared/_Layout.cshtml
+++ b/Developer/Views/Shared/_Layout.cshtml
@@ -5,11 +5,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-    <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/Site.css" rel="stylesheet" type="text/css"/>
+    <link href="~/Content/ng-grid.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
 </head>
-<body data-ng-app="main" data-ng-controller="RootController">
+<body>
     <div class="row">
     </div>
     <div class="container body-content">
@@ -119,9 +120,12 @@
     </div>
 
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
+<script src="~/Scripts/bootstrap.min.js"></script>
     @Scripts.Render("~/bundles/angular")
     @Scripts.Render("~/bundles/app")
-    @RenderSection("scripts", required: false)
+<script language="javascript">
+    $('.dropdown-toggle').dropdown();
+    $(".carousel").carousel();
+</script>
 </body>
 </html>
