--- a/Developer/Views/Home/Land.cshtml
+++ b/Developer/Views/Home/Land.cshtml
@@ -52,8 +52,8 @@
             <form>
                 <label for="City">Miasto</label>
                 <input type="text" id="City" name="firstName" data-ng-model="selectedOffert.City"/>
-                <label for="Heating">Ogrzewanie</label>
-                <input type="text" id="Heating" name="Heating" data-ng-model="selectedOffert.Heating"/>
+                <label for="Heating">Powierzchnia</label>
+                <input type="text" id="Area" name="Area" data-ng-model="selectedOffert.Area"/>
             </form>
         </div>
     </div>
