--- a/Developer/Views/Admin/Add.cshtml
+++ b/Developer/Views/Admin/Add.cshtml
@@ -10,10 +10,10 @@
             @Html.Partial("_AddFlat", Model.Flat)
         </div>
         <div id="home-form" hidden>
-            @Html.Partial("_AddHouse", Model)
+            @Html.Partial("_AddHouse", Model.House)
         </div>
         <div id="land-form" hidden>
-            @Html.Partial("_AddLand", Model)
+            @Html.Partial("_AddLand", Model.Land)
         </div>
     </div>
 </div>
