--- a/Developer/Views/Home/Show.cshtml
+++ b/Developer/Views/Home/Show.cshtml
@@ -11,6 +11,13 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.Pictures)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Pictures)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.Location)
         </dt>
 
