--- a/Developer/Views/Admin/_addFlat.cshtml
+++ b/Developer/Views/Admin/_addFlat.cshtml
@@ -95,7 +95,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <small>Zdjęcia:</small>
-                        <input type="file" multiple class="form-control" id="Files" name="Files"/>
+                        <input type="file" multiple class="form-control" id="Files" name="Files" accept="image/*" />
                     </div>
                 </div>
                 <input type="hidden" id="AdType" name="AdType" value="Flat" />
